--- a/Home/View/about.html
+++ b/Home/View/about.html
@@ -15,12 +15,9 @@
 </head>
 <body>
 <div class="ibody">
-  <header>
-    <h1>如影随形</h1>
-    <h2>影子是一个会撒谎的精灵，它在虚空中流浪和等待被发现之间;在存在与不存在之间....</h2>
-    <div class="logo"><a href="/"></a></div>
-    <nav id="topnav"><a href="index.html">首页</a><a href="about.html">关于我</a><a href="newlist.html">慢生活</a><a href="share.html">模板分享</a><a href="new.html">模板主题</a></nav>
-  </header>
+  <?php
+    include 'header.html';
+  ?>
   <article>
     <h3 class="about_h">您现在的位置是：<a href="/">首页</a>><a href="1/">关于我</a></h3>
     <div class="about">
@@ -43,15 +40,15 @@
   <aside>
     <div class="avatar"><a href="about.html"><span>关于杨青</span></a></div>
     <div class="topspaceinfo">
-      <h1>执子之手，与子偕老</h1>
+       <h1>执子之手，与子偕老</h1>
       <p>于千万人之中，我遇见了我所遇见的人....</p>
     </div>
     <div class="about_c">
-      <p>网名：DanceSmile | 即步非烟</p>
-      <p>职业：Web前端设计师、网页设计 </p>
-      <p>籍贯：四川省—成都市</p>
-      <p>电话：13662012345</p>
-      <p>邮箱：dancesmiling@qq.com</p>
+      <p>网名：Mr.Elephpant | 修</p>
+      <p>职业：Php开发爱好者、在校大三学生 </p>
+      <p>籍贯：吉林省—白山市</p>
+      <p>电话：13944670612</p>
+      <p>邮箱：787956151@qq.com</p>
       <p><a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&amp;email=HHh9cn95b3F1cHVye1xtbTJ-c3E" ><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_22.png" alt="杨青个人博客网站"></a></p>
       <p> 
         <!--以下是QQ邮件列表订阅嵌入代码--><a target="_blank" href="http://list.qq.com/cgi-bin/qf_invite?id=65fb9b3618916f162973471ebc5b97ff786efae0ec9a863e"><img border="0" alt="填写您的邮件地址，订阅我们的精彩内容：" src="http://rescdn.list.qq.com/zh_CN/htmledition/images/qunfa/manage/picMode_light_m.png" /></a> </p>
