--- a/Home/View/index.html
+++ b/Home/View/index.html
@@ -15,14 +15,9 @@
 </head>
 <body>
 <div class="ibody">
-  <header>
-    <h1>如影随形</h1>
-    <h2>影子是一个会撒谎的精灵，它在虚空中流浪和等待被发现之间;在存在与不存在之间....</h2>
-    <div class="logo"><a href="/"></a></div>
-    <nav id="topnav"><a href="/Home/index.php?c=Index&f=show&p=index">首页</a><a href="/Home/index.php?c=Index&f=show&p=about">日记</a><a href="/Home/index.php?c=Article&f=source">经典语录</a><a href="/Home/index.php?c=Index&f=show&p=share">程序人生</a><a href="/Home/index.php?c=Index&f=show&p=new">个人博客模板</a><!-- <a href="">网站建设</a>
-    <a href="">心得笔记</a><a href="">css3</a> --></nav>
-
-  </header>
+  <?php
+    include 'header.html';
+  ?>
   <article>
     <div class="banner">
       <ul class="texts">
@@ -72,6 +67,7 @@
       <p>电话：13944670612</p>
       <p>邮箱：787956151@qq.com</p>
     </div>
+    <!-- 此处不知为何不显示了?? -->
     <div class="bdsharebuttonbox"><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_more" data-cmd="more"></a></div>
     <div class="tj_news">
       <h2>
