--- a/Home/View/newlist.html
+++ b/Home/View/newlist.html
@@ -15,14 +15,20 @@
 </head>
 <body>
 <div class="ibody">
-  <header>
-    <h1>如影随形</h1>
-    <h2>影子是一个会撒谎的精灵，它在虚空中流浪和等待被发现之间;在存在与不存在之间....</h2>
-    <div class="logo"><a href="/"></a></div>
-    <nav id="topnav"><a href="/Home/index.php?c=Index&f=show&p=index">首页</a><a href="about.html">关于我</a><a href="newlist.html">慢生活</a><a href="share.html">模板分享</a><a href="new.html">模板主题</a></nav>
-  </header>
+  <?php
+    include 'header.html';
+  ?>
   <article>
-    <h2 class="about_h">您现在的位置是：<a href="/Home/index.php?c=Index&f=show&p=index">首页</a>><a href="1/">慢生活</a></h2>
+    <h2 class="about_h">您现在的位置是：<a href="/Home/index.php?c=Index&f=show&p=index">
+    首页</a>><a href="1/">慢生活</a>
+    <?php
+      if($_GET['f'] == 'classify'){
+        echo "
+          <a href=''>".$where1['classify']."</a>
+        ";
+      }
+    ?>
+    </h2>
     <div class="bloglist">
     <?php
       $i = 1;
@@ -34,7 +40,7 @@
             <div class='newblog'>
               <ul>
                 <h3><a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'>".$v['title']."</a></h3>
-                <div class='autor'><span>作者：杨青</span><span>分类：[<a href='/'>".$v['classify']."</a>]</span><span>浏览（<a href='/'>".$v['browse']."</a>）</span><!-- <span>评论（<a href='/'>30</a>）</span> --></div>
+                <div class='autor'><span>作者：修宇</span><span>分类：[<a href='/'>".$v['classify']."</a>]</span><span>浏览（<a href='/'>".$v['browse']."</a>）</span><!-- <span>评论（<a href='/'>30</a>）</span> --></div>
                 <p>".$content."<a href='/Home/index.php?c=Article&f=show&id=".$v['id']."' class='readmore'>全文</a></p>
                <!-- target='_blank' -->
               </ul>
@@ -79,41 +85,49 @@
   </article>
   <aside>
     <div class="rnav">
-      <li class="rnav1 "><a href="/">日记</a></li>
-      <li class="rnav2 "><a href="/">欣赏</a></li>
-      <li class="rnav3 "><a href="/">程序人生</a></li>
-      <li class="rnav4 "><a href="/">经典语录</a></li>
+      <?php
+        foreach($module as $k => $v){
+        $color = ($k+1)%4+1;
+          echo "
+            <li class='rnav".$color."'><a href='/Home/index.php?c=Article&f=classify&p=".$v['alias']."'>".$v['title']."</a></li>
+          ";
+        }
+      ?>
     </div>
     <div class="ph_news">
       <h2>
         <p>点击排行</p>
       </h2>
       <ul class="ph_n">
-        <li><span class="num1">1</span><a href="/">有一种思念，是淡淡的幸福,一个心情一行文字</a></li>
-        <li><span class="num2">2</span><a href="/">励志人生-要做一个潇洒的女人</a></li>
-        <li><span class="num3">3</span><a href="/">女孩都有浪漫的小情怀——浪漫的求婚词</a></li>
-        <li><span>4</span><a href="/">Green绿色小清新的夏天-个人博客模板</a></li>
-        <li><span>5</span><a href="/">女生清新个人博客网站模板</a></li>
-        <li><span>6</span><a href="/">Wedding-婚礼主题、情人节网站模板</a></li>
-        <li><span>7</span><a href="/">Column 三栏布局 个人网站模板</a></li>
-        <li><span>8</span><a href="/">时间煮雨-个人网站模板</a></li>
-        <li><span>9</span><a href="/">花气袭人是酒香—个人网站模板</a></li>
+        <?php
+          $i = 0;
+          foreach($ClickRank as $k => $v){
+            if($i<3){
+              echo "
+                 <li><span class='num".($i+1)."'>".($i+1)."</span><a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'>".$v['title']."</a></li>
+              ";
+            }else{
+              echo "
+                <li><span>".($i+1)."</span><a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'>".$v['title']."</a></li>
+              ";
+            }
+            $i++;
+          }
+        ?>
       </ul>
       <h2>
-        <p>栏目推荐</p>
+        <p>最新文章</p>
       </h2>
       <ul>
-        <li><a href="/">有一种思念，是淡淡的幸福,一个心情一行文字</a></li>
-        <li><a href="/">励志人生-要做一个潇洒的女人</a></li>
-        <li><a href="/">女孩都有浪漫的小情怀——浪漫的求婚词</a></li>
-        <li><a href="/">Green绿色小清新的夏天-个人博客模板</a></li>
-        <li><a href="/">女生清新个人博客网站模板</a></li>
-        <li><a href="/">Wedding-婚礼主题、情人节网站模板</a></li>
-        <li><a href="/">Column 三栏布局 个人网站模板</a></li>
-        <li><a href="/">时间煮雨-个人网站模板</a></li>
-        <li><a href="/">花气袭人是酒香—个人网站模板</a></li>
+        <?php
+          foreach($latest as $k => $v){
+            echo "
+              <li><a href='/Home/index.php?c=Article&f=show&id=".$v['id']."'>".$v['title']."</a></li>
+            ";
+          }
+        ?>
       </ul>
-      <h2>
+      <!-- <h2>
         <p>最新评论</p>
       </h2>
       <ul class="pl_n">
@@ -163,7 +177,7 @@
         <ul>
           <img src="<?php echo __PUBLIC__;?>/images/vis.jpg"><!-- 直接使用“多说”插件的调用代码 -->
         </ul>
-      </h2>
+      </h2> -->
     </div>
     <div class="copyright">
       <ul>
