--- a/Admin/View/moduleFrom.html
+++ b/Admin/View/moduleFrom.html
@@ -27,7 +27,7 @@
         <li>
             <label>父模块</label>
             <select class="dfinput" name="parentid">
-                <option value="-1">顶级分类</option>
+                <!-- <option value="-1">顶级分类</option> -->
                 <?php 
                     foreach($show as $k => $v){
                         echo "
